--- a/app/src/main/res/layout/activity_basic_components.xml
+++ b/app/src/main/res/layout/activity_basic_components.xml
@@ -1,100 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:fillViewport="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".practicas.graphiccomponents.BasicComponentsActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ivLogo"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="100dp"
-        android:layout_height="100dp"/>
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:text="Esto es un textView prueba"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="18sp"
-        android:textStyle="italic"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        tools:context=".practicas.graphiccomponents.BasicComponentsActivity">
 
-    <EditText
-        android:id="@+id/etPassword"
-        android:inputType="textPassword"
-        android:hint="Ingresa tu password"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/ivLogo"
+            android:src="@mipmap/ic_launcher"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
 
-    <EditText
-        android:id="@+id/etEmail"
-        android:inputType="textEmailAddress"
-        android:hint="Ingresa tu Email"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/tvTitle"
+            android:text="Esto es un textView prueba"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="18sp"
+            android:textStyle="italic"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <CheckBox
-        android:id="@+id/cbCredit"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="20dp"
-        android:text="¿Tienes tarjeta de credito?"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <EditText
+            android:id="@+id/etPassword"
+            android:inputType="textPassword"
+            android:hint="Ingresa tu password"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <RadioGroup
-        android:id="@+id/rgGenre"
-        app:layout_constraintTop_toBottomOf="@+id/cbCredit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/etEmail"
+            android:inputType="textEmailAddress"
+            android:hint="Ingresa tu Email"
+            app:layout_constraintTop_toBottomOf="@+id/spinner"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-        <RadioButton
-            android:id="@+id/rbWoman"
-            android:text="Mujer"
+        <CheckBox
+            android:id="@+id/cbCredit"
+            app:layout_constraintTop_toBottomOf="@+id/etPassword"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            android:text="¿Tienes tarjeta de credito?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <RadioButton
-            android:id="@+id/rbMan"
-            android:text="Hombre"
+        <RadioGroup
+            android:id="@+id/rgGenre"
+            app:layout_constraintTop_toBottomOf="@+id/cbCredit"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/rbWoman"
+                android:text="Mujer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <RadioButton
+                android:id="@+id/rbMan"
+                android:text="Hombre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </RadioGroup>
+
+        <Spinner
+            android:id="@+id/spinner"
+            app:layout_constraintTop_toBottomOf="@+id/rgGenre"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"/>
 
-    </RadioGroup>
 
-    <Spinner
-        android:id="@+id/spinner"
-        app:layout_constraintTop_toBottomOf="@+id/rgGenre"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"/>
+        <ScrollView
+            app:layout_constraintTop_toBottomOf="@+id/etEmail"
+            app:layout_constraintBottom_toTopOf="@+id/btNext"
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
 
-    <Button
-        android:id="@+id/btNext"
-        android:text="Siguiente"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
+            <TextView
+                android:text="There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source."
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+
+
+        <Button
+            android:id="@+id/btNext"
+            android:text="Siguiente"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"/>
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</ScrollView>
