--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -19,6 +19,6 @@
         android:layout_marginBottom="30dp"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Llamar Fragment C"/>
+        android:text="@string/app_name"/>
 
 </FrameLayout>
